# gsheets-mcp

./: .gitignore  Makefile  PAGINATION_GUIDE.md  QUICKSTART.md  README.md  authenticate.py  mcp-server-config.json  pyproject.toml  setup.py  simplemcp.py
